[project]
name = "fluffy-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.117.1",
    "pydantic-settings>=2.10.1",
    "selenium>=4.35.0",
    "selenium-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
